# PlotPalette

./: LICENSE  README.md  pyproject.toml
plotpalette/: __init__.py  bar_charts.py  colour_picker.py  colours.py  font.py  misc.py  preset.py
scripts/: draw_colour_samples.py  print_colour_tables.py
test/: all_colours.py  pick_colour.py
