[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotpalette"
version = "0.0.1"
description = "A library that makes plotting charts easier."
authors = [
    {name = "Lau Yee-Yu", email = "liuyiyu2003@126.com"}
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
experimentor = "plotpalette.__main__:main"
